--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "react-hooks-children",
   "version": "0.1.0",
@@ -5,11 +6,10 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "4.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "test": "jest"
+    "start": "react-scripts start"
   },
   "eslintConfig": {
     "extends": [
